--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,16 @@ html {
 body {
   @apply bg-background text-foreground antialiased;
 }
+
+.animate-pulse-opacity {
+  animation: pulseOpacity 8s ease-in-out infinite;
+}
+@keyframes pulseOpacity {
+  0%,
+  100% {
+    opacity: 0.4;
+  }
+  50% {
+    opacity: 1;
+  }
+}
